Collapsible panes (#3205)
* Add support for collapsible panes

* Move the collapsible button to the outside of the split

* Code analysis and cleanup

* Move the collapsible button into the panel